[package]
name = "nft-minting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
crate-type = ["cdylib"]

[lib]
name = "contract"
path = "src/lib.rs"

[features]
default = []
testutils = ["soroban-sdk/testutils"]
# If you have additional features in your contract, add them here.

[dependencies]
soroban_sdk = "=0.9.0" 

